# drone

./: .dockerignore  .gitignore  .graphify_detect.json  .pre-commit-config.yaml  3dvoxelmap.txt  AGENTS.md  CLAUDE.md  DRONE_VIDEO_SETUP.md  Makefile  Makefile.local  PROFITABLE_MVP_ANALYSIS.md  Procfile.dev  README.md  TECHNICAL_MARKET_READINESS_PLAN.md  WIRELESS_VIDEO_SETUP.md  aggriculture_with_ROS.txt  ai_agent.txt  ardu_telemetry_publisher.py  business_model.txt  commands.txt  config.py  coordinate_setup.txt  docker-compose.observability.yml  docker-compose.test.yml  docker-compose.yml  flight_flow.txt  flow.txt  frontend_refactor_duplicates.txt  logs.txt  main.py  mypy.ini  package-lock.json  package.json  product_trend_research.txt  prompt.txt  pyproject.toml  pytest.ini  requirements.txt  ros2.txt  ros2bridge_intall.txt  (+8 more)
warehouse_ros2_ws/src/warehouse_mapping_bridge/: package.xml  setup.cfg  setup.py
warehouse_ros2_ws/src/warehouse_mapping_bridge/config/: defaults.yaml  defaults_gazebo.yaml  defaults_real_device.yaml  gazebo_bridge.yaml  isaac_stack.yaml  warehouse_topics.yaml
warehouse_ros2_ws/src/warehouse_mapping_bridge/launch/: bridge_service.launch.py  gazebo_warehouse_stack.launch.py  isaac_warehouse_mapping.launch.py  real_device_warehouse_mapping.launch.py
warehouse_ros2_ws/src/warehouse_mapping_bridge/rviz/: nvblox_warehouse.rviz
warehouse_ros2_ws/src/warehouse_mapping_bridge/tests/: test_bridge_health.py  test_config_consistency.py  test_isaac_stack_contract.py  test_launch_assets.py  test_live_map_payload.py  test_nvblox_export.py  test_odometry_tracking.py  test_ros_graph.py  test_session_status.py  test_tf_frame_consistency.py  test_topic_diagnostics.py  test_vision_mavlink.py
warehouse_ros2_ws/src/warehouse_mapping_bridge/urdf/: warehouse_drone.urdf
warehouse_ros2_ws/src/warehouse_mapping_bridge/warehouse_mapping_bridge/: __init__.py  artifact_exporter_node.py  bridge_service.py  config.py  diagnostics_aggregator_node.py  health_monitor_node.py  isaac_stack_contract.py  isaac_stack_preflight_node.py  live_map_publisher_node.py  nvblox_export.py  odometry_export_node.py  process_supervisor.py  ros_graph.py  ros_node_utils.py  session.py  session_model.py  (+5 more)
(+1925 files in other folders)
