<?xml version="1.0"?>
<package format="3">
  <name>warehouse_mapping_bridge</name>
  <version>0.1.0</version>
  <description>Jetson-side ROS 2 and Isaac ROS bridge for warehouse 3D mapping.</description>
  <maintainer email="operator@example.com">Drone App</maintainer>
  <license>Proprietary</license>

  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>rosgraph_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nvblox_msgs</exec_depend>
  <exec_depend>rosbag2_transport</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rviz_common</exec_depend>
  <exec_depend>rviz_default_plugins</exec_depend>

  <exec_depend>python3-fastapi</exec_depend>
  <exec_depend>python3-lark</exec_depend>
  <exec_depend>python3-pymavlink</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-uvicorn</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
